added redis and postgres
