# internal/handlers/handlers.go
@@ -2,14 +2,14 @@ package handlers
 
 import (
 	"context"
-	"database/sql"
 	"encoding/json"
 	"io"
 	"net/http"
 	"strconv"
 	"time"
 
-	"avitoBootcamp/internal/queries"
+	"avitoBootcamp/internal/models"
+	"avitoBootcamp/internal/storage"
 
 	"github.com/golang-jwt/jwt/v4"
 	"github.com/gorilla/mux"
@@ -17,33 +17,6 @@ import (
 )
 
 const jwtKey string = `B2iDZ6286IOLg8O1/f81Zdzh1BglfKTdLVw6twOqZGs=`
-
-type AuthorizationToken struct {
-	Token string `json:"token"`
-}
-
-type CustomClaims struct {
-	Type string
-	jwt.RegisteredClaims
-}
-
-type House struct {
-	Id        int64  `json:"id"`
-	Address   string `json:"address"`
-	Year      int    `json:"year"`
-	Developer string `json:"developer"`
-	CreatedAt string `json:"created_at"`
-	UpdateAt  string `json:"update_at"`
-}
-
-type Flat struct {
-	Id      int64  `json:"id"`
-	HouseId int64  `json:"house_id"`
-	Price   int64  `json:"price"`
-	Rooms   int    `json:"rooms"`
-	Status  string `json:"status"`
-	Num     int    `json:"flat_num"`
-}
 
 func DummyLoginHandler(w http.ResponseWriter, r *http.Request) {
 	userType := r.URL.Query().Get(`user_type`)
@@ -54,7 +27,7 @@ func DummyLoginHandler(w http.ResponseWriter, r *http.Request) {
 	}
 
 	expirationTime := time.Now().Add(15 * time.Minute)
-	claims := &CustomClaims{
+	claims := &models.CustomClaims{
 		Type: userType,
 		RegisteredClaims: jwt.RegisteredClaims{
 			ExpiresAt: jwt.NewNumericDate(expirationTime),
@@ -70,14 +43,14 @@ func DummyLoginHandler(w http.ResponseWriter, r *http.Request) {
 
 	w.Header().Set("Content-type", "application/json")
 
-	json.NewEncoder(w).Encode(AuthorizationToken{Token: tokenStr})
+	json.NewEncoder(w).Encode(models.AuthorizationToken{Token: tokenStr})
 }
 
 func AuthorizationMiddleware(next http.Handler, onlyModerator bool) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		tokenStr := r.Header.Get(`Authorization`)
 
-		claims := &CustomClaims{}
+		claims := &models.CustomClaims{}
 
 		token, err := jwt.ParseWithClaims(tokenStr, claims, func(t *jwt.Token) (interface{}, error) {
 			return []byte(jwtKey), nil
@@ -99,10 +72,10 @@ func AuthorizationMiddleware(next http.Handler, onlyModerator bool) http.Handler
 	})
 }
 
-func HouseCreateHandler(db *sql.DB) http.Handler {
+func HouseCreateHandler(db storage.Database) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		body, err := io.ReadAll(r.Body)
-		var house House
+		var house models.House
 
 		if err != nil {
 			http.Error(w, err.Error(), http.StatusBadRequest)
@@ -112,15 +85,21 @@ func HouseCreateHandler(db *sql.DB) http.Handler {
 		defer r.Body.Close()
 
 		if err := json.Unmarshal(body, &house); err != nil {
+
 			http.Error(w, err.Error(), http.StatusBadRequest)
 			return
 		}
 
-		house.CreatedAt = time.Now().UTC().Format(`2017-07-21T17:32:28.000Z`)
-		query := `INSERT INTO house (address, year, developer, created_at) 
-		VALUES($1, $2, $3, $4) RETURNING id`
+		// house.CreatedAt = time.Now().UTC().Format("2006-01-02T15:04:05.000Z")
+		// query := `INSERT INTO house (address, year, developer, created_at)
+		// VALUES($1, $2, $3, $4) RETURNING id`
 
-		if err := db.QueryRow(query, house.Address, house.Year, house.Developer, house.CreatedAt).Scan(&house.Id); err != nil {
+		// if err := db.QueryRow(query, house.Address, house.Year, house.Developer, house.CreatedAt).Scan(&house.Id); err != nil {
+		// 	http.Error(w, err.Error(), http.StatusInternalServerError)
+		// 	return
+		// }
+		house, err = db.CreateHouse(house)
+		if err != nil {
 			http.Error(w, err.Error(), http.StatusInternalServerError)
 			return
 		}
@@ -139,9 +118,9 @@ func HouseCreateHandler(db *sql.DB) http.Handler {
 	})
 }
 
-func FlatCreateHandler(db *sql.DB) http.Handler {
+func FlatCreateHandler(db storage.Database) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		var flat Flat
+		var flat models.Flat
 		body, err := io.ReadAll(r.Body)
 
 		if err != nil {
@@ -156,12 +135,19 @@ func FlatCreateHandler(db *sql.DB) http.Handler {
 			return
 		}
 
-		flat.Status = `created`
+		// flat.Status = `created`
 
-		query := `INSERT INTO flat (house_id, price, rooms, flat_num, status) 
-		VALUES($1, $2, $3, $4, $5) RETURNING id`
+		// query := `INSERT INTO flat (house_id, price, rooms, flat_num, status)
+		// VALUES($1, $2, $3, $4, $5) RETURNING id`
 
-		if err := db.QueryRow(query, flat.HouseId, flat.Price, flat.Rooms, flat.Num, flat.Status).Scan(&flat.Id); err != nil {
+		// if err := db.QueryRow(query, flat.HouseId, flat.Price, flat.Rooms, flat.Num, flat.Status).Scan(&flat.Id); err != nil {
+		// 	http.Error(w, err.Error(), http.StatusInternalServerError)
+		// 	return
+		// }
+
+		flat, err = db.CreateFlat(flat)
+
+		if err != nil {
 			http.Error(w, err.Error(), http.StatusInternalServerError)
 			return
 		}
@@ -173,7 +159,7 @@ func FlatCreateHandler(db *sql.DB) http.Handler {
 			return
 		}
 
-		if err := queries.UpdateAtHouse(db, flat.HouseId); err != nil {
+		if err := db.UpdateAtHouseLastFlatTime(flat.HouseId); err != nil {
 			http.Error(w, err.Error(), http.StatusInternalServerError)
 			return
 		}
@@ -184,10 +170,10 @@ func FlatCreateHandler(db *sql.DB) http.Handler {
 	})
 }
 
-func FlatUpdateHandler(db *sql.DB) http.Handler {
+func FlatUpdateHandler(db storage.Database) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		body, err := io.ReadAll(r.Body)
-		var flat Flat
+		var flat models.Flat
 
 		if err != nil {
 			http.Error(w, err.Error(), http.StatusBadRequest)
@@ -201,9 +187,32 @@ func FlatUpdateHandler(db *sql.DB) http.Handler {
 			return
 		}
 
-		query := `UPDATE flat SET status = $1 WHERE id = $2 RETURNING price, rooms, house_id, flat_num`
+		// var currStatus string
+		// var currModeratorId *int
 
-		if err := db.QueryRow(query, flat.Status, flat.Id).Scan(&flat.Price, &flat.Rooms, &flat.HouseId, &flat.Num); err != nil {
+		// query := `SELECT status, moderator_id FROM flat WHERE id = $1`
+		// err = db.QueryRow(query, flat.Id).Scan(&currStatus, &currModeratorId)
+		// if err != nil {
+		// 	http.Error(w, err.Error(), http.StatusInternalServerError)
+		// 	return
+		// }
+
+		// if currStatus == `on moderation` && (currModeratorId == nil || *currModeratorId != flat.ModeratorId) {
+		// 	http.Error(w, `This flat has already been moderated by another moderator`, http.StatusUnauthorized)
+		// 	return
+		// }
+
+		// if flat.Status == `on moderation` {
+		// 	query = `UPDATE flat SET status = $1, moderator_id = $2 WHERE id = $3 RETURNING price, rooms, house_id, flat_num`
+		// 	err = db.QueryRow(query, flat.Status, flat.ModeratorId, flat.Id).Scan(&flat.Price, &flat.Rooms, &flat.HouseId, &flat.Num)
+		// } else {
+		// 	query = `UPDATE flat SET status = $1 WHERE id = $2 RETURNING price, rooms, house_id, flat_num, moderator_id`
+		// 	err = db.QueryRow(query, flat.Status, flat.Id).Scan(&flat.Price, &flat.Rooms, &flat.HouseId, &flat.Num, &flat.ModeratorId)
+		// }
+
+		flat, err = db.UpdateFlat(flat)
+
+		if err != nil {
 			http.Error(w, err.Error(), http.StatusInternalServerError)
 			return
 		}
@@ -221,7 +230,7 @@ func FlatUpdateHandler(db *sql.DB) http.Handler {
 	})
 }
 
-func GetFlatsInHouseHandler(db *sql.DB) http.Handler {
+func GetFlatsInHouseHandler(db storage.Database) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		parameters := mux.Vars(r)
 
@@ -239,32 +248,39 @@ func GetFlatsInHouseHandler(db *sql.DB) http.Handler {
 			return
 		}
 
-		query := `SELECT id, house_id, price, rooms, status, flat_num FROM flat  WHERE house_id = $1 `
+		// query := `SELECT id, house_id, price, rooms, status, flat_num FROM flat  WHERE house_id = $1 `
 
-		if userType != `moderator` {
-			query += ` AND status = 'approved'`
-		}
+		// if userType != `moderator` {
+		// 	query += ` AND status = 'approved'`
+		// }
 
-		rows, err := db.Query(query, houseId)
+		// rows, err := db.Query(query, houseId)
+
+		// if err != nil {
+		// 	http.Error(w, err.Error(), http.StatusInternalServerError)
+		// 	return
+		// }
+
+		// defer rows.Close()
+
+		// var flats []models.Flat
+
+		// for rows.Next() {
+		// 	var currFlat models.Flat
+
+		// 	if err := rows.Scan(&currFlat.Id, &currFlat.HouseId, &currFlat.Price, &currFlat.Rooms, &currFlat.Status, &currFlat.Num); err != nil {
+		// 		http.Error(w, err.Error(), http.StatusInternalServerError)
+		// 		return
+		// 	}
+
+		// 	flats = append(flats, currFlat)
+		// }
+
+		flats, err := db.GetFlatsByHouseID(houseId, userType)
 
 		if err != nil {
 			http.Error(w, err.Error(), http.StatusInternalServerError)
 			return
-		}
-
-		defer rows.Close()
-
-		var flats []Flat
-
-		for rows.Next() {
-			var currFlat Flat
-
-			if err := rows.Scan(&currFlat.Id, &currFlat.HouseId, &currFlat.Price, &currFlat.Rooms, &currFlat.Status, &currFlat.Num); err != nil {
-				http.Error(w, err.Error(), http.StatusInternalServerError)
-				return
-			}
-
-			flats = append(flats, currFlat)
 		}
 
 		w.Header().Set(`Content-Type`, `application/json`)
